recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {

	var e = (length/shrink)
	var p = 0

	
	
	tree(steps, length, angle, shrink) 
	p = Math.floor(e/shrink)
	current(p)
	


	

	
	
	
}
